# solana1

./: .gitignore  LICENSE  README.md
app/: .env.example  package-lock.json  package.json  server.js
app/public/: index.html
app/public/css/: style.css
app/public/js/: app.js
app/src/: App.tsx
app/src/components/: EducationalPanel.tsx  Footer.tsx  Header.tsx  PoolInterface.tsx  StudentDEX.tsx  SwapInterface.tsx
client/: Cargo.toml
client/src/: lib.rs
docs/: SETUP.md
programs/solana-dex/: Cargo.toml
programs/solana-dex/src/: lib.rs
programs/student-dex/: Cargo.toml
programs/student-dex/src/: error.rs  lib.rs  state.rs
programs/student-dex/src/instructions/: add_liquidity.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs
scripts/: deploy.sh  setup-devnet.sh
tests/: dex_test.rs
