[package]
name = "solana_dex_client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "~1.16.0"
solana-sdk = "~1.16.0"
solana-program = "~1.16.0"
spl-token = "~4.0.0"
spl-associated-token-account = "~2.3.0"
borsh = "0.10.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
